--- a/index.html
+++ b/index.html
@@ -782,6 +782,7 @@ pre.rouge {
 <li><a href="#pods">Pods</a>
 <ul class="sectlevel2">
 <li><a href="#_pod_registry">Pod registry</a></li>
+<li><a href="#_pods_in_bb_edn">Pods in bb.edn</a></li>
 </ul>
 </li>
 <li><a href="#style">Style</a>
@@ -1931,7 +1932,7 @@ added to the classpath:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:paths</span><span class="w"> </span><span class="p">[</span><span class="s">"script"</span><span class="p">]</span><span class="w">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:paths</span><span class="w"> </span><span class="p">[</span><span class="s">"bb"</span><span class="p">]</span><span class="w">
  </span><span class="no">:deps</span><span class="w"> </span><span class="p">{</span><span class="n">medley/medley</span><span class="w"> </span><span class="p">{</span><span class="no">:mvn/version</span><span class="w"> </span><span class="s">"1.3.0"</span><span class="p">}}}</span></code></pre>
 </div>
 </div>
@@ -1944,7 +1945,7 @@ added to the classpath:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>If we have a main function in a file called <code>script/my_project/main.clj</code> like:</p>
+<p>If we have a main function in a file called <code>bb/my_project/main.clj</code> like:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -3272,6 +3273,42 @@ to HTML.</p>
      </span><span class="p">[</span><span class="no">:h1</span><span class="w"> </span><span class="s">"Using Bootleg From Babashka"</span><span class="p">]</span><span class="w">
      </span><span class="p">[</span><span class="no">:p</span><span class="w"> </span><span class="s">"This is a demo"</span><span class="p">]]</span><span class="w">
     </span><span class="p">(</span><span class="nf">utils/convert-to</span><span class="w"> </span><span class="no">:html</span><span class="p">))</span></code></pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_pods_in_bb_edn"><a class="link" href="#_pods_in_bb_edn">Pods in bb.edn</a></h3>
+<div class="paragraph">
+<p>Since bb 0.8.0 pods can be declared in <code>bb.edn</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:paths</span><span class="w"> </span><span class="p">[</span><span class="s">"bb"</span><span class="p">]</span><span class="w">
+ </span><span class="no">:pods</span><span class="w"> </span><span class="p">{</span><span class="n">retrogradeorbit/bootleg</span><span class="w"> </span><span class="p">{</span><span class="no">:version</span><span class="w"> </span><span class="s">"0.1.9"</span><span class="p">}}}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Given the file <code>bb/my_project/bootlet.clj</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">ns</span><span class="w"> </span><span class="n">my-project.bootleg</span><span class="w">
+  </span><span class="p">(</span><span class="no">:require</span><span class="w"> </span><span class="p">[</span><span class="n">pod.retrogradeorbit.bootleg.utils</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">utils</span><span class="p">]))</span><span class="w">
+
+</span><span class="p">(</span><span class="k">defn</span><span class="w"> </span><span class="n">-main</span><span class="w"> </span><span class="p">[</span><span class="o">&amp;</span><span class="w"> </span><span class="n">_args</span><span class="p">]</span><span class="w">
+  </span><span class="p">(</span><span class="nb">prn</span><span class="w"> </span><span class="p">(</span><span class="nb">-&gt;</span><span class="w"> </span><span class="p">[</span><span class="no">:div</span><span class="w">
+            </span><span class="p">[</span><span class="no">:h1</span><span class="w"> </span><span class="s">"Using Bootleg From Babashka"</span><span class="p">]</span><span class="w">
+            </span><span class="p">[</span><span class="no">:p</span><span class="w"> </span><span class="s">"This is a demo"</span><span class="p">]]</span><span class="w">
+           </span><span class="p">(</span><span class="nf">utils/convert-to</span><span class="w"> </span><span class="no">:html</span><span class="p">))))</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>you can then execute the main function, without calling <code>load-pod</code> manually:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>bb <span class="nt">-m</span> my-project.bootleg
+<span class="s2">"&lt;div&gt;&lt;h1&gt;Using Bootleg From Babashka&lt;/h1&gt;&lt;p&gt;This is a demo&lt;/p&gt;&lt;/div&gt;"</span></code></pre>
 </div>
 </div>
 </div>
