--- a/index.html
+++ b/index.html
@@ -3288,7 +3288,7 @@ to HTML.</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Given the file <code>bb/my_project/bootlet.clj</code>:</p>
+<p>Given the file <code>bb/my_project/bootleg.clj</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
