--- a/index.html
+++ b/index.html
@@ -1937,7 +1937,7 @@ added to the classpath:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>If we have a project that has a deps.edn and would like to reuse those deps in bb.edn:</p>
+<p>If we have a project that has a <code>deps.edn</code> and would like to reuse those deps in <code>bb.edn</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
