--- a/index.html
+++ b/index.html
@@ -1460,11 +1460,13 @@ accomplish the same:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w"> </span><span class="p">{</span><span class="n">nrepl</span><span class="w"> </span><span class="p">{</span><span class="no">:requires</span><span class="w"> </span><span class="p">([</span><span class="n">babashka.nrepl.server</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">srv</span><span class="p">])</span><span class="w">
-                </span><span class="no">:task</span><span class="w"> </span><span class="p">(</span><span class="nf">do</span><span class="w"> </span><span class="p">(</span><span class="nf">srv/start-server!</span><span class="w"> </span><span class="p">{</span><span class="no">:host</span><span class="w"> </span><span class="s">"localhost"</span><span class="w">
-                                              </span><span class="no">:port</span><span class="w"> </span><span class="mi">1339</span><span class="p">})</span><span class="w">
-                          </span><span class="p">(</span><span class="nf">spit</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="w"> </span><span class="s">"1339"</span><span class="p">)</span><span class="w">
-                          </span><span class="p">(</span><span class="nb">deref</span><span class="w"> </span><span class="p">(</span><span class="nf">promise</span><span class="p">)))}}}</span></code></pre>
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w">
+ </span><span class="p">{</span><span class="n">nrepl</span><span class="w">
+  </span><span class="p">{</span><span class="no">:requires</span><span class="w"> </span><span class="p">([</span><span class="n">babashka.nrepl.server</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">srv</span><span class="p">])</span><span class="w">
+   </span><span class="no">:task</span><span class="w"> </span><span class="p">(</span><span class="nf">do</span><span class="w"> </span><span class="p">(</span><span class="nf">srv/start-server!</span><span class="w"> </span><span class="p">{</span><span class="no">:host</span><span class="w"> </span><span class="s">"localhost"</span><span class="w">
+                                 </span><span class="no">:port</span><span class="w"> </span><span class="mi">1339</span><span class="p">})</span><span class="w">
+             </span><span class="p">(</span><span class="nf">spit</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="w"> </span><span class="s">"1339"</span><span class="p">)</span><span class="w">
+             </span><span class="p">(</span><span class="nb">deref</span><span class="w"> </span><span class="p">(</span><span class="nf">promise</span><span class="p">)))}}}</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
