--- a/index.html
+++ b/index.html
@@ -2469,7 +2469,7 @@ directly instead. These two invocations are roughly equivalent:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">shell</span><span class="w"> </span><span class="s">"npm install"</span><span class="w"> </span><span class="s">"-g nbb"</span><span class="err">"</span><span class="p">)</span></code></pre>
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">shell</span><span class="w"> </span><span class="s">"npm install"</span><span class="w"> </span><span class="s">"-g nbb"</span><span class="p">)</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
