--- a/index.html
+++ b/index.html
@@ -774,6 +774,12 @@ pre.rouge {
 <li><a href="#_syntax">Syntax</a></li>
 </ul>
 </li>
+<li><a href="#_babashka_cli">Babashka CLI</a>
+<ul class="sectlevel2">
+<li><a href="#_x">-x</a></li>
+<li><a href="#_exec">exec</a></li>
+</ul>
+</li>
 <li><a href="#libraries">Libraries</a>
 <ul class="sectlevel2">
 <li><a href="#built-in-namespaces">Built-in namespaces</a></li>
@@ -959,7 +965,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="bash">Babashka v0.9.161
+<pre class="rouge highlight"><code data-lang="bash">Babashka v0.9.162
 
 Usage: bb <span class="o">[</span>svm-opts] <span class="o">[</span>global-opts] <span class="o">[</span><span class="nb">eval </span>opts] <span class="o">[</span>cmdline args]
 or:    bb <span class="o">[</span>svm-opts] <span class="o">[</span>global-opts] file <span class="o">[</span>cmdline args]
@@ -2660,6 +2666,10 @@ will be invoked with <code>*command-line-args*</code>:</p>
 <div class="paragraph">
 <p>Alternatively, you can use <code>babashka.tasks/run</code> to invoke a task from a REPL.</p>
 </div>
+<div class="paragraph">
+<p>For REPL- and linting-friendliness, it&#8217;s recommended to move task code longer
+than a couple of lines to a <code>.clj</code> or <code>.bb</code> file.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_real_world_examples"><a class="link" href="#_real_world_examples">Real world examples</a></h3>
@@ -2773,6 +2783,106 @@ it manually using <code>(require '[foo])</code>.</p>
 </div>
 </div>
 <div class="sect1">
+<h2 id="_babashka_cli"><a class="link" href="#_babashka_cli">Babashka CLI</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>In version <code>0.9.160</code> of babashka, the <a href="https://github.com/babashka/cli">babashka
+CLI</a> added as a built-in library together with task integration.</p>
+</div>
+<div class="sect2">
+<h3 id="_x"><a class="link" href="#_x">-x</a></h3>
+<div class="paragraph">
+<p>For invoking functions from the command line, you can use the new <code>-x</code>
+flag (a pun to Clojure’s <code>-X</code> of course!):</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">bb</span><span class="w"> </span><span class="n">-x</span><span class="w"> </span><span class="n">clojure.core/identity</span><span class="w"> </span><span class="n">--hello</span><span class="w"> </span><span class="n">there</span><span class="w">
+</span><span class="p">{</span><span class="no">:hello</span><span class="w"> </span><span class="s">"there"</span><span class="p">}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>What we see in the above snippet is that a map <code>{:hello "there"}</code> is
+constructed by babashka CLI and then fed to the <code>identity</code> function.
+After that the result is printed to the console.</p>
+</div>
+<div class="paragraph">
+<p>What if we want to influence how things are parsed by babashka CLI and
+provide some defaults? This can be done using metadata. Let’s create a
+<code>bb.edn</code> and make a file available on the classpath:</p>
+</div>
+<div class="paragraph">
+<p><code>bb.edn</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:paths</span><span class="w"> </span><span class="p">[</span><span class="s">"."</span><span class="p">]}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p><code>tasks.clj</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">ns</span><span class="w"> </span><span class="n">tasks</span><span class="w">
+  </span><span class="p">{</span><span class="no">:org.babashka/cli</span><span class="w"> </span><span class="p">{</span><span class="no">:exec-args</span><span class="w"> </span><span class="p">{</span><span class="no">:ns-data</span><span class="w"> </span><span class="mi">1</span><span class="p">}}})</span><span class="w">
+
+</span><span class="p">(</span><span class="k">defn</span><span class="w"> </span><span class="n">my-function</span><span class="w">
+  </span><span class="p">{</span><span class="no">:org.babashka/cli</span><span class="w"> </span><span class="p">{</span><span class="no">:exec-args</span><span class="w"> </span><span class="p">{</span><span class="no">:fn-data</span><span class="w"> </span><span class="mi">1</span><span class="p">}</span><span class="w">
+                      </span><span class="no">:coerce</span><span class="w"> </span><span class="p">{</span><span class="no">:num</span><span class="w"> </span><span class="p">[</span><span class="no">:int</span><span class="p">]}</span><span class="w">
+                      </span><span class="no">:alias</span><span class="w"> </span><span class="p">{</span><span class="no">:n</span><span class="w"> </span><span class="no">:num</span><span class="p">}}}</span><span class="w">
+  </span><span class="p">[</span><span class="n">m</span><span class="p">]</span><span class="w">
+  </span><span class="n">m</span><span class="p">)</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Now let’s invoke:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">-x</span><span class="w"> </span><span class="n">tasks/my-function</span><span class="w"> </span><span class="n">-n</span><span class="w"> </span><span class="mi">1</span><span class="w"> </span><span class="mi">2</span><span class="w">
+</span><span class="p">{</span><span class="no">:ns-data</span><span class="w"> </span><span class="mi">1</span><span class="n">,</span><span class="w"> </span><span class="no">:fn-data</span><span class="w"> </span><span class="mi">1</span><span class="n">,</span><span class="w"> </span><span class="no">:num</span><span class="w"> </span><span class="p">[</span><span class="mi">1</span><span class="w"> </span><span class="mi">2</span><span class="p">]}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>As you can see, the namespace options are merged with the function
+options. Defaults can be provided with <code>:exec-args</code>, like you’re used
+to from the clojure CLI.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_exec"><a class="link" href="#_exec">exec</a></h3>
+<div class="paragraph">
+<p>What about task integration? Let’s adapt our <code>bb.edn</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:paths</span><span class="w"> </span><span class="p">[</span><span class="s">"."</span><span class="p">]</span><span class="w">
+ </span><span class="no">:tasks</span><span class="w"> </span><span class="p">{</span><span class="n">doit</span><span class="w"> </span><span class="p">{</span><span class="no">:task</span><span class="w"> </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">x</span><span class="w"> </span><span class="p">(</span><span class="nf">exec</span><span class="w"> </span><span class="ss">'tasks/my-function</span><span class="p">)]</span><span class="w">
+                       </span><span class="p">(</span><span class="nb">prn</span><span class="w"> </span><span class="no">:x</span><span class="w"> </span><span class="n">x</span><span class="p">))</span><span class="w">
+               </span><span class="no">:exec-args</span><span class="w"> </span><span class="p">{</span><span class="no">:task-data</span><span class="w"> </span><span class="mi">1234</span><span class="p">}}</span><span class="w">
+         </span><span class="p">}}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>and invoke the task:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">doit</span><span class="w"> </span><span class="n">--cli-option</span><span class="w"> </span><span class="no">:yeah</span><span class="w"> </span><span class="n">-n</span><span class="w"> </span><span class="mi">1</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="mi">3</span><span class="w">
+</span><span class="no">:x</span><span class="w"> </span><span class="p">{</span><span class="no">:ns-data</span><span class="w"> </span><span class="mi">1</span><span class="n">,</span><span class="w"> </span><span class="no">:fn-data</span><span class="w"> </span><span class="mi">1</span><span class="n">,</span><span class="w"> </span><span class="no">:task-data</span><span class="w"> </span><span class="mi">1234</span><span class="n">,</span><span class="w"> </span><span class="no">:cli-option</span><span class="w"> </span><span class="no">:yeah,</span><span class="w"> </span><span class="no">:num</span><span class="w"> </span><span class="p">[</span><span class="mi">1</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="mi">3</span><span class="p">]}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>As you can see it works similar to <code>-x</code>, but you can provide another
+set of defaults on the task level with <code>:exec-args</code>. Executing a
+function through babashka CLI is done using the <code>babashka.task/exec</code>
+function, available by default in tasks.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="libraries"><a class="link" href="#libraries">Libraries</a></h2>
 <div class="sectionbody">
 <div class="sect2">
@@ -2803,6 +2913,9 @@ PR is welcome.</p>
 </li>
 <li>
 <p><code>clojure.edn</code> aliased as <code>edn</code></p>
+</li>
+<li>
+<p><code>clojure.math</code></p>
 </li>
 <li>
 <p><code>clojure.java.browse</code></p>
@@ -2851,13 +2964,16 @@ PR is welcome.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="https://github.com/babashka/cli"><code>babashka.cli</code></a></p>
+</li>
+<li>
 <p><a href="https://github.com/borkdude/babashka.curl"><code>babashka.curl</code></a></p>
 </li>
 <li>
-<p><a href="https://github.com/babashka/process"><code>babashka/process</code></a></p>
+<p><a href="https://github.com/babashka/process"><code>babashka.process</code></a></p>
 </li>
 <li>
-<p><a href="https://github.com/babashka/fs"><code>babashka/fs</code></a></p>
+<p><a href="https://github.com/babashka/fs"><code>babashka.fs</code></a></p>
 </li>
 <li>
 <p><a href="https://github.com/nrepl/bencode"><code>bencode.core</code></a> aliased as <code>bencode</code>:
@@ -2952,6 +3068,12 @@ as <code>transit</code></p>
 </li>
 <li>
 <p><a href="https://github.com/ptaoussanis/timbre"><code>timbre</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/borkdude/edamame"><code>edamame</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/clojure/core.rrb-vector"><code>core.rrb-vector</code></a></p>
 </li>
 </ul>
 </div>
@@ -3641,7 +3763,7 @@ compute a classpath using tools.deps</p>
   </span><span class="p">(</span><span class="nf">t/run-tests</span><span class="w"> </span><span class="ss">'your.test-a</span><span class="w"> </span><span class="ss">'your.test-b</span><span class="p">))</span><span class="w">           <i class="conum" data-value="3"></i><b>(3)</b>
 
 </span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">failures-and-errors</span><span class="w">
-  </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[{</span><span class="no">:keys</span><span class="w"> </span><span class="p">[</span><span class="no">:fail</span><span class="w"> </span><span class="no">:error</span><span class="p">]}</span><span class="w"> </span><span class="n">test-results</span><span class="p">]</span><span class="w">
+  </span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[{</span><span class="no">:keys</span><span class="w"> </span><span class="p">[</span><span class="n">fail</span><span class="w"> </span><span class="n">error</span><span class="p">]}</span><span class="w"> </span><span class="n">test-results</span><span class="p">]</span><span class="w">
     </span><span class="p">(</span><span class="nb">+</span><span class="w"> </span><span class="n">fail</span><span class="w"> </span><span class="n">error</span><span class="p">)))</span><span class="w">                                 <i class="conum" data-value="4"></i><b>(4)</b>
 
 </span><span class="p">(</span><span class="nf">System/exit</span><span class="w"> </span><span class="n">failures-and-errors</span><span class="p">)</span><span class="w">                    <i class="conum" data-value="5"></i><b>(5)</b>
@@ -3704,7 +3826,7 @@ be implemented with:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>This can be exceedingly handy for complex writing complex scripts while not being able to adjust how they are invoked by other tools.</p>
+<p>This can be exceedingly handy for editing complex scripts interactively, while not being able to adjust how they are invoked by other tools.</p>
 </div>
 </div>
 <div class="sect2">
@@ -4033,7 +4155,7 @@ make an issue and/or PR.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-07-03 18:39:42 +0200
+Last updated 2022-09-12 13:18:37 +0200
 </div>
 </div>
 <!-- see https://github.com/asciidoctor/asciidoctor/issues/699#issuecomment-321066006 -->
