--- a/index.html
+++ b/index.html
@@ -3329,6 +3329,15 @@ namespace.</p>
 <a href="https://github.com/babashka/fs">fs</a> repo for API docs.</p>
 </div>
 </div>
+<div class="sect3">
+<h4 id="babashkacli"><a class="link" href="#babashkacli">babashka.cli</a></h4>
+<div class="paragraph">
+<p>The <code>babashka.cli</code> library allows you to turn functions into CLIs. See the
+<a href="https://github.com/babashka/cli">cli</a> repo for API docs and check out the
+<a href="https://book.babashka.org/#_babashka_cli">babashka CLI</a> chapter on how to use it
+from the command line or with <a href="https://book.babashka.org/#tasks">tasks</a>.</p>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_projects"><a class="link" href="#_projects">Projects</a></h3>
